--- a/Views/Projects/TeamManagement.cshtml
+++ b/Views/Projects/TeamManagement.cshtml
@@ -2,7 +2,7 @@
 @using AntTrak.Helpers
 @model Project
 
-@*@using (Html.BeginForm("TeamManagement", "Projects", FormMethod.Post))*@
+@using (Html.BeginForm("TeamManagement", "Projects", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
@@ -24,8 +24,8 @@
                         <div class="row">
                             <div class="col-6">
                                 @if (User.IsInRole("Admin"))
-                                {
-                                    @Html.DropDownList("ProjectManagerId", null, "Select Project Manager", new { @class = "form-control" })
+                                {                                    
+                                    @Html.DropDownList("ProjectManagerId", null, "Unassigned", new { @class = "form-control" })
                                 }
                             </div>
                             <br />
@@ -56,11 +56,11 @@
                 <div class="card-footer">
                     <div class="row">
                         <br />
-                        <div class="col">
-                            @Html.ActionLink("Assign to Project", "AssignMembers", new { id = Model.Id }, new { @class = "form-control btn btn-success" })                            
+                        <div class="col">                            
+                            <button type="submit" value="true" name="addMember" class="form-control btn-success">Assign to Project</button>                        
                         </div>
-                        <div class="col">
-                            @Html.ActionLink("Remove from Project", "RemoveMembers", new { id = Model.Id }, new { @class = "form-control btn btn-danger" })
+                        <div class="col">                           
+                            <button type="submit" value="false" name="addMember" class="form-control btn-danger">Remove from Project</button>
                         </div>
                         <div class="col">
                             @Html.ActionLink("Back To Project", "Details", new { id = Model.Id }, new { @class = "form-control btn btn-dark" })
@@ -74,7 +74,7 @@
             <div class="col-8">
                 <div class="card">
                     <div class="card-body">
-                        <table class="table">
+                        <table class="table table-striped">
                             <thead>
                                 <tr>
                                     <th>
@@ -113,12 +113,7 @@
                                                 @*@projUser.Roles.FirstOrDefault();*@
                                             </td>
                                         </tr>
-
                                     }
-
-
-
-
                                 }
                             </tbody>
                         </table>
