--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,12 +48,7 @@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
-                @* <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>*@
+              
             </ul>
 
             <!-- SEARCH FORM -->
@@ -71,11 +66,10 @@
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
                 <!-- Messages Dropdown Menu -->
-                @*TLF  need to create a loop to show all notifications once I figure out this code
-                @foreach (var message in messagehelper.getunreadmessage())*@
+                
                 <li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
-                        <i class="far fa-comments"></i>
+                        <i class="far fa-bell"></i>
                         @{var msgCount = "";
                             if (MessageHelper.GetUnreadNotifications().Count > 0)
                             {
@@ -87,7 +81,7 @@
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                         @foreach (var notification in MessageHelper.GetUnreadNotifications())
                         {
-                            <a href="#" class="dropdown-item">
+                            <a href="@Url.Action("Dismiss", "TicketNotifications", new {id = notification.Id})" class="dropdown-item">
                                 <!-- Message Start -->
 
                                 <div class="media">
@@ -109,7 +103,7 @@
                     </div>
                 </li>
                 <!-- Notifications Dropdown Menu -->
-                <li class="nav-item dropdown">
+                @*<li class="nav-item dropdown">
                     <a class="nav-link" data-toggle="dropdown" href="#">
                         <i class="far fa-bell"></i>
                         <span class="badge badge-warning navbar-badge">15</span>
@@ -134,7 +128,7 @@
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                     </div>
-                </li>
+                </li>*@
                 <li class="nav-item">
                     <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
                         <i class="fas fa-th-large"></i>
