--- a/Views/Shared/_TicketTable.cshtml
+++ b/Views/Shared/_TicketTable.cshtml
@@ -1,87 +1,112 @@
-﻿@model IEnumerable<AntTrak.Models.Ticket>
+﻿@using AntTrak.Helpers
+//@using AntTrak.ViewModel
+@model AntTrak.ViewModel.TicketTable
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Developer.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Project.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Submitter.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TicketPriority.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TicketStatus.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TicketType.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Updated)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsArchived)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Developer.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Project.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Submitter.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TicketPriority.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TicketStatus.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TicketType.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Created)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Updated)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsArchived)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@{ 
+    TicketHelper ticketHelper = new TicketHelper();
 }
 
+<table class="table table-striped">
+    <thead>
+        <tr>
+            @*I'll need to include functionality to hide this if displayed on the project view'*@
+            @*@if(Model.)
+            {*@   
+                <th>
+                    @Html.DisplayName("Project")
+                </th>
+            @*}*@
+            <th>
+                @Html.DisplayName("Developer")
+            </th>
+            <th>
+                @Html.DisplayName("Title")
+            </th>
+            <th>
+                @Html.DisplayName("Submitter")
+            </th>
+            <th>
+                @Html.DisplayName("Priority")
+            </th>
+            <th>
+                @Html.DisplayName("Type")
+            </th>
+            <th>
+                @Html.DisplayName("Status")
+            </th>
+            <th>
+                @Html.DisplayName("Created")
+            </th>
+            <th>
+                @Html.DisplayName("Last Updated")
+            </th>
+
+            <th></th>
+
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+        <tr>
+            @if (!ViewBag.ProjectLevel)
+            {
+                <td>
+                    @Html.DisplayFor(modelItem => item.Project.Name)
+                </td>
+            }
+            <td>
+                @{
+                    var dev = item.Developer;
+                    var devName = dev != null ? dev.Fullname : "Unassigned";
+                }
+                @devName
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Submitter.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketPriority.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketType.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TicketStatus.Name)
+            </td>
+            <td class="noWrap">
+                @*@item.Created.ToString("MMM dd, yyyy")*@
+                @Html.DisplayFor(modelItem => item.Created)
+            </td>
+            <td class="noWrap">
+                @Html.DisplayFor(modelItem => item.Updated)
+                @*@item.Updated.GetValueOrDefault().ToString("MMM dd, yyyy")*@
+            </td>
+            @if (ViewBag.ProjectLevel && ViewBag.MyTickets)
+            {
+                //at the project level we need to evaluate at the row level, but the quanity should be low enough that it doesn't affect processing time
+                @if (ticketHelper.IsMyTicket(item.Id))
+                {
+                    <td>
+                        @Html.ActionLink("Details", "Details", "Tickets", new { id = item.Id }, null)
+                    </td>
+                }
+            }
+            else if(!ViewBag.ProjectLevel && ViewBag.MyTickets)
+            {
+                <td>
+                    @Html.ActionLink("Details", "Details", "Tickets", new { id = item.Id }, null)
+                </td>
+            }
+            else
+            {
+                <td></td>
+            }
+
+            </tr>
+        }
+    </tbody>
 </table>
